--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,10 +28,8 @@ jobs:
       with:
         java-version: '8'
         distribution: 'temurin'
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@749f47bda3e44aa060e82d7b3ef7e40d953bd629
-      with:
-        arguments: build
+    - name: Run build with Gradle Wrapper
+      run: gradle build
     - uses: actions/upload-artifact@v3
       with:
         name: Package
